--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@
 .box1{
     height: 180px;
     width: 150px;
-    background-color: aquamarine;
+    background-color: white;
     text-align: center;
     padding: 10px;
     border-radius: 5px;
@@ -138,4 +138,75 @@
 .all-box{
     display: flex;
     gap: 5px;
+}
+.consultation{
+    height:140px;
+    width: 80%;
+    background-color: rgb(247, 21, 21);
+    margin: auto;
+    align-items: center;
+}
+.consultation{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 15px;
+    margin-top: -100px;
+}
+.call-icon{
+    height: 60px;
+    width: 50px;
+}
+.phone{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: white;
+}
+.consul-para{
+    color: white;
+    font-size: large;
+}
+.btn-2{
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: small;
+    font-weight: bold;
+    
+}
+.blog-news{
+    height: 100vh;
+}
+.blog-news-title{
+    text-align: center;
+    padding-top: 20px;
+    font-size: 70px;
+}
+.blog-news-para{
+    text-align: center;
+    font-size: large;
+    padding-top: 20px;
+}
+.blog-box{
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.blog-box-1{
+    height: 500px;
+    width: 300px;
+    border-radius: 5px solid black;
+    background-color: gray;
+    text-align: center;
+    padding: 20px;
+    margin: 20px;
+    margin-bottom: 15px;
+    box-shadow: 4px 8px 4px red;
+    
+}
+.blog-image{
+    height: 350px;
+    width: 250px;
 }
