--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@
 }
 .banner-container{
     height: 100vh;
-    background-image:url(/asset/image/background.jpg);
+    background-image:url(./asset/image/background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
@@ -68,7 +68,7 @@
 }
 .service-list{
     height: 100vh;
-    background-image: url(/asset/image/footer-bg.png),linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9));
+    background-image: url(./asset/image/footer-bg.png),linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9));
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
@@ -213,7 +213,7 @@
 }
 .last-page{
     height: 100vh;
-    background-image: url(/asset/image/footer-bg.png),linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9));
+    background-image: url(./asset/image/footer-bg.png),linear-gradient(rgba(0,0,0,0.9),rgba(0,0,0,0.9));
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     background-size: cover;
